src/TileViews/RBCX.css
.rbcx {
  position: relative;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  line-height: 1.8em;
  color: #666666;
}

.rbcx a {
  color: #999999;
}

@media all and (min-width: 1200px) {
  .rbcx p, .rbcx h2 {
    padding: 0 50px;
  }
}

/* HEADERS */

.rbcx-header {
  background-image: url('../images/rbcx/header.png');
  background-color: #EA3A7D;
  background-repeat: no-repeat;
}

/* CONTAINERS */

/*TODO: Move other containers into this section */
.blue-background {
  margin-top: 200px;
  position: relative;
  background-color: #DFF0F0;
  width: 100%;
  padding-top: 80%;
}

@media all and (min-width: 712px) {
  .blue-background {
    padding-top: 0;
    height: 412px;
  }
}

/* TEXT */

.rbcx-desc {
  margin-bottom: 50px;
}

.rbcx-text-box {
  padding: 70px 0;
}

.venture-caption {
  margin-top: 0;
}

.poster-container {
  margin-bottom: 178px;
}

.poster-desc {
  padding-top: 70px;
  flex: 1;
  position: relative;
}

.poster-desc-inner p, .poster-desc-inner h2 {
  padding: 0 25px;
}

@media all and (min-width: 650px) {
  .poster-desc-inner p, .poster-desc-inner h2 {
    padding: 0 calc((100vw - 600px)/2);
  }
}

@media all and (min-width: 1285px) {
  .poster-container {
    width: 100%;
    display: flex;
  }
  .poster-desc-inner {
    position: absolute;
    bottom: 0;
  }
  .poster-desc-inner p, .poster-desc-inner h2 {
    padding: 0 50px;
  }
}

.rbc-wrapper-a {
  position: relative;
  width: 100%;
}

@media all and (min-width: 800px) {
  .rbc-wrapper-a {
    padding-top: 80%;
    margin-bottom: 300px;
  }
}

.center-box {
  padding: 70px 25px;
}

@media all and (min-width: 675px) {
  .center-box {
    margin: 0 27.5%;
    width: 45%;
    padding: 70px 0;
  }
}

.center-box p, .center-box h2 {
  padding: 0;
}

@media all and (min-width: 800px) {
  .playbook-box {
    position: absolute;
    padding-top: calc(400px + 35%);
    left: 0;
    top: 0;
  }
}

/* IMAGES */
/* TODO: Move common image CSS into ContentWrapper file */

.rbcx-img {
  float: left;
}

.d-shadow {
  box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.05),0 -2px 15px 0 rgba(0,0,0,0.05);
}

.rbcx-img1 {
  width: 531px;
}

@media all and (max-width: 581px) {
  .rbcx-img1 {
    width: 100%;
  }
}

.rbcx-img2 {
  width: 100%;
  margin-right: 50px;
  margin-bottom: 70px;
}

/* 482px + 25px margins from content-wrapper */
@media all and (min-width: 532px) {
  .rbcx-img2 {
    width: 482px;
    margin: 0 calc(50% - 241px);
    margin-bottom: 70px;
  }
}

@media all and (min-width: 1370px) {
  .rbcx-img, .rbcx-img2 {
    margin: 0 50px 90px 0;
  }
}

.rbcx-img3 {
  width: 100%;
}

@media all and (min-width: 1285px) {
  .rbcx-img4-cont {
    flex: 2;
  }
}

.rbcx-img4 {
  width: 100%;
  left: 0;
}

.inspiration-img {
  position: absolute;
  bottom: 121px;
  left: 0;
  width: calc(100% - 70px);
  margin: 35px;
}

@media all and (min-width: 712px) {
  .inspiration-img {
    width: 642px;
    margin: 0 calc(50% - 321px);
  }
}

.yellow-img, .computer-bkg, .computer-img {
  display: none;
}

@media all and (min-width: 1300px) {
  .yellow-img, .computer-bkg, .computer-img {
    position: absolute;
    display: block;
  }
  .yellow-img {
    top: 90px;
    left: 106px;
    width: 134px;
  }
  .computer-bkg {
    background-color: #FDEDEE;
    top: -108px;
    right: 60px;
    width: 202px;
    height: 265px;
  }
  .computer-img {
    top: -157px;
    right: 0;
    width: 211px;
  }
}

.rbc-dots {
  display: none;
}

.founder-img {
  width: 100%;
}

@media all and (min-width: 800px) {
  .rbc-dots {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 60%;
  }
  .founder-img {
    position: absolute;
    top: 300px;
    left: 0;
    width: 45%;
    margin: 0 27.5%;
  }
  .pink-box {
    position: absolute;
    top: 160px;
    right: 0;
    background-color: #F9CBCE;
    padding-top: 20%;
    width: 33%;
    z-index: -1;
  }
}

.backpacker {
  margin: -5px;
  width: 100%;
}

.open-book {
  margin: -5px;
  width: 100%;
}

@media all and (min-width: 650px) {
  .backpacker {
    width: 63.377%;
  }
  .open-book {
    width: 36.623%;
  }
}

.people-img {
  width: 49.1%;
}

.rocket-img {
  width: 50.9%;
}

.our-brand {
  width: 62.3%;
}

.hand-cards {
  width: 37.7%;
}

.bottom-x {
  display: block;
  width: 57px;
  margin: 0 auto;
  margin-bottom: 120px;
}

